# AdditiveAccumulator

./: CMakeLists.txt  additive_accumulator_1.cpp  additive_accumulator_1.h  additive_accumulator_2.cpp  additive_accumulator_2.h  fast_tree_v1.cpp  fast_tree_v1.h  merkle_tree.cpp  merkle_tree.h  run.sh  utils.cpp  utils.h
test/: CMakeLists.txt  test1.cpp  test2.cpp  test_merkle.cpp  test_util.cpp  test_util.h
